# wegmans_clipper

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  shell.nix
docker/: Dockerfile.build-aarch64  Dockerfile.build-x86_64  Dockerfile.cronjob  Dockerfile.oneshot
examples/clip_coupon/: main.rs
examples/get_coupons/: main.rs
examples/login/: main.rs
examples/login_webdriver/: main.rs
src/: main.rs
src/wegmans_client/: command_context.rs  constants.rs  coupons_dto.rs  http_client.rs  lib.rs  webdriver_client.rs
src/wegmans_client/http_client/: client_provider.rs  coupon_client.rs  handle_error.rs  mod.rs
