[package]
name = "wegmans_coupons"
version = "0.1.0"
edition = "2021"

[lib]
name = "wegmans_coupons_client"
path = "src/wegmans_client/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ['native-tls-vendored', 'json'] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
fantoccini = "0.19.3"
anyhow = "1.0.69"
async-trait = "0.1.66"
futures = "0.3.27"
